--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#">Hire Me</a>
         </div>
         <div class="image-box">
-            <img src="/image.jpg" alt="">
+            <img src="image.jpg" alt="">
         </div>
     </div>
     <script src="app.js"></script>
